# canonical-manager-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  fcm.toml  justfile
.github/workflows/: ci.yml  publish.yml
benches/: cas.rs  disk_usage.rs  download_parallelism.rs  durable_writes.rs  install.rs  linker.rs  lockfile.rs  resolve.rs  search.rs  tar_extract.rs
benches/common/: mod.rs
examples/: advanced_search.rs  basic_usage.rs  configuration.rs  package_management.rs  search_parameters.rs
src/: binary_storage.rs  cas_storage.rs  change_detection.rs  cli.rs  cli_error.rs  concurrency.rs  config.rs  config_validator.rs  content_hash.rs  domain.rs  error.rs  fuzzy.rs  incremental_indexer.rs  index_writer.rs  lib.rs  lib.rs.bak  output.rs  package.rs  parallel_processor.rs  performance.rs  progress.rs  rebuild_strategy.rs  registry.rs  registry_clients.rs  resolver.rs  search.rs  sqlite_storage.rs  storage.rs  traits.rs  unified_storage.rs
src/storage/: mod.rs  optimized.rs
src/store/: cas.rs  fhir_cache.rs  linker.rs  lock.rs  lockfile.rs  materialize.rs  mod.rs  paths.rs
tests/: integration_tests.rs  unit_tests.rs
tests/common/: fixtures.rs  mock_registry.rs  mod.rs  test_helpers.rs
tests/integration/: concurrent_install_tests.rs  e2e_install_resolve_search_tests.rs  frozen_lockfile_tests.rs  metrics_smoke.rs  package_flow_tests.rs  perf_baseline.rs
tests/unit/: atomicity_tests.rs  config_tests.rs  fuzzy_tests.rs  local_loading_tests.rs  package_tests.rs  registry_clients_tests.rs  registry_integrity_tests.rs  registry_tests.rs  resolver_proptest.proptest-regressions  resolver_proptest.rs  resolver_semantics_tests.rs  resolver_tests.rs  storage_base_index_tests.rs  storage_tests.rs
