[package]
name = "octofhir-canonical-manager"
version = "0.1.14"
edition = "2024"
description = "FHIR Canonical Manager - Library-first FHIR package management"
license = "MIT OR Apache-2.0"
authors = ["OctoFHIR Team <funyloony@gmail.com"]
repository = "https://github.com/octofhir/canonical-manager-rs"
keywords = ["fhir", "healthcare", "canonical", "package-manager"]
categories = ["science", "web-programming", "command-line-utilities"]
exclude = ["CLAUDE.md", ".github/", "rust-toolchain.toml"]

[lib]
name = "octofhir_canonical_manager"
path = "src/lib.rs"

[[bin]]
name = "octofhir-fcm"
path = "src/bin/main.rs"

[[example]]
name = "search_parameters"
path = "examples/search_parameters.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
semver = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-tar = "0.5"
sha1 = "0.10"
hex = "0.4"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
parking_lot = "0.12"

# Error handling
thiserror = "2"
anyhow = "1.0"

# CLI framework
clap = { version = "4.0", features = ["derive"], optional = true }
human-panic = "2.0.4"

# Terminal UI
colored = { version = "3", optional = true }

# File handling
zip = "6"
flate2 = "1"
tar = "0.4"

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }

# URL handling
url = { version = "2.5", features = ["serde"] }

# Path utilities
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite database - async-first for tokio runtime
deadpool-sqlite = { version = "0.12.1", features = ["rt_tokio_1"] }
rusqlite = { version = "0.37", features = ["bundled"] }

# Performance optimization dependencies
blake3 = "1.5"
dashmap = "6.1"
lru = "0.16"
rayon = "1.10"
crossbeam-channel = "0.5"
walkdir = "2.5"

# Async file I/O
tokio-util = { version = "0.7", features = ["io", "compat"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.0"

# System information for config optimization
num_cpus = "1.0"

# Optional metrics
metrics = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["cli"]
cli = ["clap", "colored"]
fuzzy-search = []
metrics = ["dep:metrics"]
test-utils = []
